--- a/syllabus.Rmd
+++ b/syllabus.Rmd
@@ -36,7 +36,7 @@ Other UI colleges may have different policies.
 Office: 175 Psychological and Brain Sciences Building (PBSB)\
 E-mail: [isaac-t-petersen@uiowa.edu](mailto:isaac-t-petersen@uiowa.edu)\
 Office Phone: 467-1014\
-Student drop-in hours: <mark>INSERT</mark>\
+Student drop-in hours: Monday 4–5 & Thursday 3–5\
 Note: I'm here to help you learn and succeed.
 Please come to my office hours to ask questions about course material, assignments, exams, or professional development (career-related issues), for instance.
 I welcome you to discuss any concerns you might have about the class.
