--- a/syllabus.Rmd
+++ b/syllabus.Rmd
@@ -658,7 +658,7 @@ The distribution, sharing, sale, or posting of recordings on the internet (inclu
 
 # Where to Get Academic Support for This Course {#academic-support}
 
-- Drop-in study groups and one-on-one tutoring: drop-in student hours of the <u>undergraduate TA, graduate TA, and</u> instructor
+- Drop-in study groups and one-on-one tutoring: student drop-in hours of the instructor
 - Formal tutoring: Tutor Iowa: https://tutor.uiowa.edu
 - UI Writing Center: https://writingcenter.uiowa.edu
 - Academic accommodations: https://sds.studentlife.uiowa.edu
