--- a/syllabus.Rmd
+++ b/syllabus.Rmd
@@ -530,13 +530,13 @@ We will have one exam during the semester and one final exam during finals week.
 
 | **Section**      | **Day** | **Date** | **Content**                                                                  | Reading                             | Assignment                            |
 |:-----------------|:--------|:---------|:-----------------------------------------------------------------------------|:------------------------------------|:--------------------------------------|
-| [1](#section1)   | T       | 08/26    | Overview of Class; Overview of Fantasy Football                              | Ch [1](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/intro.html)–[2](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/fantasy-football.html) | [CodeAcademy Module 1](https://www.codecademy.com/learn/learn-r) |
-| [2](#section2)   | Th      | 08/28    | Statistical Programming: Using `R` for Statistical Analysis                  | Ch [3](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/getting-started.html) | [CodeAcademy Modules 2–3](https://www.codecademy.com/learn/learn-r) |
+| [1](#section1)   | T       | 08/26    | Overview of Class; Overview of Fantasy Football                              | Ch [1](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/intro.html)–[2](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/fantasy-football.html) | [Codecademy Module 1](https://www.codecademy.com/learn/learn-r) |
+| [2](#section2)   | Th      | 08/28    | Statistical Programming: Using `R` for Statistical Analysis                  | Ch [3](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/getting-started.html) | [Codecademy Modules 2–3](https://www.codecademy.com/learn/learn-r) |
 | [3](#section3)   | T       | 09/02    | Player Evaluation                                                            | Ch [6](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/player-evaluation.html); Den Hartigh et al. (2018) | **Set up blog; post welcome article** |
-| [4](#section4)   | Th      | 09/04    | The Draft                                                                    | Ch [7](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/draft.html); Lee & Liu (2022) | [CodeAcademy Modules 5–6](https://www.codecademy.com/learn/learn-r) |
-| [5](#section5)   | T       | 09/09    | Statistical Programming in `R`                                               | Ch [4](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/download-football-data.html) | [CodeAcademy Modules 7–10](https://www.codecademy.com/learn/learn-r) |
+| [4](#section4)   | Th      | 09/04    | The Draft                                                                    | Ch [7](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/draft.html); Lee & Liu (2022) | [Codecademy Modules 5–6](https://www.codecademy.com/learn/learn-r) |
+| [5](#section5)   | T       | 09/09    | Statistical Programming in `R`                                               | Ch [4](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/download-football-data.html) | [Codecademy Modules 7–10](https://www.codecademy.com/learn/learn-r) |
 | [6](#section6)   | Th      | 09/11    | Basic Statistics                                                             | Ch [8](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/research-methods.html)–[9](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/basic-statistics.html) | **Blog article 1 due!**               |
-| [7](#section7)   | T       | 09/16    | Data Visualization and Interpretation                                        | Ch [5](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/data-visualization.html); Schwabish (2021) | [CodeAcademy Module 4](https://www.codecademy.com/learn/learn-r) |
+| [7](#section7)   | T       | 09/16    | Data Visualization and Interpretation                                        | Ch [5](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/data-visualization.html); Schwabish (2021) | [Codecademy Module 4](https://www.codecademy.com/learn/learn-r) |
 | [8](#section8)   | Th      | 09/18    | Correlation Analysis                                                         | Ch [10](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/correlation.html); Goodwin & Leech (2006) | **Blog article 2 due!**               |
 | [9](#section9)   | T       | 09/23    | Multiple Regression                                                          | Ch [11](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/multiple-regression.html); Osborne & Waters (2002) |                                       |
 | [10](#section10) | Th      | 09/25    | Mixed Models                                                                 | Ch [12](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/mixed-models.html); Brauer & Kurtin (2018) |                                       |
