--- a/syllabus.Rmd
+++ b/syllabus.Rmd
@@ -555,7 +555,7 @@ We will have one exam during the semester and one final exam during finals week.
 | [23](#section23) | T       | 11/11    | Cluster Analysis                                                             | Ch [21](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/cluster-analysis.html); Everitt et al. (2011) |                                       |
 | [24](#section24) | Th      | 11/13    | Factor Analysis                                                              | Ch [22](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/factor-analysis.html); Field et al. (2012), Ch 17 | **Blog article 8 due!**               |
 | [25](#section25) | T       | 11/18    | Data Reduction: Principal Component Analysis                                 | Ch [23](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/pca.html) |                                       |
-| [26](#section26) | Th      | 11/20    | Simulation and the Monte Carlo Method                                        | Ch [24](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/simulation.html); Sigal & Chalmers (2016) | **Blog article 9 due!**               |
+| [26](#section26) | Th      | 11/20    | Simulation: Bootstrapping and the Monte Carlo Method                         | Ch [24](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/simulation.html); Sigal & Chalmers (2016) | **Blog article 9 due!**               |
 |                  |         | 11/24–11/27 | **FALL BREAK – NO CLASSES**                                               |                                     |                                       |
 | [27](#section27) | T       | 12/02    | Time Series Analysis                                                         | Ch [25](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/time-series-analysis.html); [Hyndman & Athanasopoulos (2021), Ch 1](https://otexts.com/fpp3/intro.html) (through Section 1.7) |        |
 | [28](#section28) | Th      | 12/04    | Decision Making in the Context of Uncertainty                                | Ch [26](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/decision-making.html); Larrick et al. (2024) | **Blog article 10 due!**              |
