--- a/syllabus.Rmd
+++ b/syllabus.Rmd
@@ -541,7 +541,7 @@ We will have one exam during the semester and one final exam during finals week.
 | [7](#section7)   | T       | 09/16    | Data Visualization and Interpretation                                        | Ch [5](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/data-visualization.html); Schwabish (2021) | [Codecademy Module 4](https://www.codecademy.com/learn/learn-r) |
 | [8](#section8)   | Th      | 09/18    | Correlation Analysis                                                         | Ch [10](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/correlation.html); Goodwin & Leech (2006) | **Blog article 2 due!**               |
 | [9](#section9)   | T       | 09/23    | Multiple Regression                                                          | Ch [11](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/multiple-regression.html); Osborne & Waters (2002) |                                       |
-| [10](#section10) | Th      | 09/25    | Mixed Models                                                                 | Ch [12](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/mixed-models.html); Brauer & Kurtin (2018) |                                       |
+| [10](#section10) | Th      | 09/25    | Mixed Models                                                                 | Ch [12](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/mixed-models.html); Brauer & Curtin (2018) |                                       |
 | [11](#section11) | T       | 09/30    | Causal Inference                                                             | Ch [13](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/causal-inference.html); D'Onofrio et al. (2020) | **Blog article 3 due!**               |
 | [12](#section12) | Th      | 10/02    | Heuristics and Cognitive Biases in Prediction                                | Ch [14](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/cognitive-bias.html); Tversky & Kahneman (1974) |                                       |
 | [13](#section13) | T       | 10/07    | Human Judgment vs Actuarial Approaches to Prediction                         | Ch [15](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/actuarial.html); Kahneman (2011), Ch 21 & 22  |                                       |
