--- a/syllabus.Rmd
+++ b/syllabus.Rmd
@@ -554,7 +554,7 @@ We will have one exam during the semester and one final exam during finals week.
 | [20](#section20) | Th      | 10/30    | Machine Learning                                                             | Ch [19](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/machine-learning.html); Ramasubramanian & Singh (2019), Ch 6 | **Blog article 6 due!**       |
 | [21](#section21) | T       | 11/04    | Mythbusters: Putting Fantasy Football Beliefs/Anecdotes to the Test          | Ch [18](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/mythbusters.html); White & Sheldon (2014)       |                                       |
 | [22](#section22) | Th      | 11/06    | Modern Portfolio Theory                                                      | Ch [20](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/modern-portfolio-theory.html); Chen (2016) | **Blog article 7 due!**               |
-| [23](#section23) | T       | 11/11    | Cluster Analysis                                                             | Ch [21](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/cluster-analysis.html); Everitt et al. (2011) |                                       |
+| [23](#section23) | T       | 11/11    | Cluster Analysis                                                             | Ch [21](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/cluster-analysis.html); Everitt et al. (2011), Ch 1 |                                       |
 | [24](#section24) | Th      | 11/13    | Factor Analysis                                                              | Ch [22](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/factor-analysis.html); Field et al. (2012), Ch 17 | **Blog article 8 due!**               |
 | [25](#section25) | T       | 11/18    | Data Reduction: Principal Component Analysis                                 | Ch [23](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/pca.html) |                                       |
 | [26](#section26) | Th      | 11/20    | Simulation: Bootstrapping and the Monte Carlo Method                         | Ch [24](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/simulation.html); Sigal & Chalmers (2016) | **Blog article 9 due!**               |
